# ot-harjoitustyo

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.md  monopoli.md  monopoli2.md  moottori.md
schooltasks/: .coveragerc  .env  .env.test  .pylintrc  pyproject.toml  tasks.py
schooltasks/data/: test_db.sqlite3  test_task.csv  test_topic.csv  topic.csv
schooltasks/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  schema.sql  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
schooltasks/src/: build.py  config.py  dbcon.py  dbinit.py  generate_questions.py  index.py  question_generator.py
schooltasks/src/entities/: result.py  task.py  topic.py  user.py
schooltasks/src/repositories/: result_repository.py  task_repository.py  topic_repository.py  user_repository.py
schooltasks/src/services/: result_services.py  task_services.py  topic_services.py  user_services.py
schooltasks/src/tests/: question_generator_test.py  result_repository_test.py  result_services_test.py  result_test.py  task_repository_test.py  task_services_test.py  task_test.py  topic_repository_test.py  topic_services_test.py  topic_test.py  user_repository_test.py  user_services_test.py  user_test.py
schooltasks/src/ui/: choice_view.py  login_view.py  new_user_view.py  plot_details.py  results_view.py  start_view.py  task_view.py  ui.py
