[tool.poetry]
name = "schooltasks"
version = "0.1.0"
description = ""
authors = ["miahro <mikko.ahro@gmail.com>"]
readme = "../README.md"
packages = [
	{include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
coverage = "^6.5.0"
pytest-env = "^0.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
