[tool.poetry]
name = "schooltasks"
version = "0.1.0"
description = ""
authors = ["miahro <mikko.ahro@gmail.com>"]
readme = "../README.md"
packages = [
	{include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.0"
pylint = "^2.15.6"
pytest-dotenv = "^0.5.2"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
